# pipelining

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  publishing.yml  update-lockfiles.yml
pipelining/: __about__.py
pipelining/core/: multistep_stage.py  pipeline.py  stage.py
pipelining/util/: logger.py
tests/: conftest.py  test_logging.py  test_multistep_stage.py  test_pipeline.py  test_stage.py
